# node_library

./: .coveragerc  .gitattributes  pyproject.toml
.binder/: environment.yml  postBuild
.ci_support/: environment-jnmpi_nodes.yml  environment-plotting.yml  environment.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily.yml  push-pull.yml
docs/: README.md  conf.py  environment.yml  index.rst
node_library/: _version.py
node_library/hmai_nodes/nequip_allegro/: input.py
node_library/jnmpi_nodes/: atomistic_codes.py  dev_tools.py  lammps.py
node_library/jnmpi_nodes/atomistic/calculator/: ase.py  data.py  generic.py
node_library/jnmpi_nodes/atomistic/engine/: lammps.py
node_library/jnmpi_nodes/atomistic/property/: elastic.py  phonons.py
node_library/jnmpi_nodes/atomistic/structure/: build.py
notebooks/: example.ipynb  phonopy_wf.ipynb  pyiron_like_workflows.ipynb
tests/unit/: test_tests.py
