[build-system]
requires = [
    "pyiron_base",
    "setuptools",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "node_library"
description = "node_library - Your pyiron-like module."
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyiron_workflow==0.8.0"
]
dynamic = [ "version",]
authors = [
    { name = "Liam Huber", email = "liamhuber@greyhavensolutions.com" },
    { name = "Joerg Neugebauer", email = "neugebauer@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://node_library.readthedocs.io"
Repository = "https://github.com/pyiron/node_library"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "node_library/_version.py"
parentdir_prefix = "node_library"
tag_prefix = "node_library-"

[tool.setuptools.packages.find]
include = [ "node_library*",]

[tool.setuptools.dynamic.version]
attr = "node_library.__version__"

[project.optional-dependencies]
jnmpi_nodes = [
    "ase==3.22.1",
    "matgl==1.1.1",
    "numpy==1.26.4",
    "phonopy==2.22.1",
    "pyiron_atomistics==0.5.4",
    "pyiron_base==0.8.3"
]
plotting = [
    "matplotlib==3.8.4"
]
